--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://dominikB:11Dl840ldyJDdf8O@OrderManagmentCluster.5hyoj73.mongodb.net/OrderManagementDatabase
 spring.data.mongodb.database=OrderManagementDatabase
+server.port=8090
